compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__tuples__constant_tuples1.snap
---
source: compiler-core/src/nix/tests/tuples.rs
expression: "\nconst e = #(\n  \"loooooooooooooong\", \"loooooooooooong\", \"loooooooooooooong\",\n  \"loooooooooooooong\", \"loooooooooooong\", \"loooooooooooooong\",\n)\n"
snapshot_kind: text
---
----- SOURCE CODE

const e = #(
  "loooooooooooooong", "loooooooooooong", "loooooooooooooong",
  "loooooooooooooong", "loooooooooooong", "loooooooooooooong",
)


----- COMPILED NIX
let
  e =
    [
      "loooooooooooooong"
      "loooooooooooong"
      "loooooooooooooong"
      "loooooooooooooong"
      "loooooooooooong"
      "loooooooooooooong"
    ];
in
{ }
