compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__tuples__tuple_access.snap
---
source: compiler-core/src/nix/tests/tuples.rs
expression: "\nfn go() {\n  #(1, 2).0\n}\n"
---
let go = { }: builtins.elemAt [ 1 2 ] 0; in { }
