compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__tuples__tuple_with_block_element.snap
---
source: compiler-core/src/nix/tests/tuples.rs
expression: "\nfn go() {\n  #(\n    \"1\", \n    {\n      \"2\"\n      \"3\"\n    },\n  )\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  #(
    "1", 
    {
      "2"
      "3"
    },
  )
}


----- COMPILED NIX
let go = { }: [ "1" (let _' = "2"; in builtins.seq _' "3") ]; in { }
