compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__tuples__tuple_with_block_element1.snap
---
source: compiler-core/src/nix/tests/tuples.rs
expression: "\nfn go() {\n  #(\n    \"1111111111111111111111111111111\",\n    #(\"1111111111111111111111111111111\", \"2\", \"3\"),\n    \"3\",\n  )\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  #(
    "1111111111111111111111111111111",
    #("1111111111111111111111111111111", "2", "3"),
    "3",
  )
}


----- COMPILED NIX
let
  go =
    { }:
    [
      "1111111111111111111111111111111"
      [ "1111111111111111111111111111111" "2" "3" ]
      "3"
    ];
in
{ }
